--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Website of Felix Huber, researcher in quantum information and computation
+title: Felix Huber
 url: "https://huberfe.github.io"
 baseurl: ""
 
