--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Felix Huber
 url: "https://huberfe.github.io"
 baseurl: ""
+description: Felix Huber Quantum Information Researcher
 
 markdown: kramdown
 #ins_logo: "./bits-logo.png"
